# advanced-python

./: .python-version  README.md  pyproject.toml
01-vanilla-python/: 02-classes.ipynb  03-integers.ipynb  05-floats.ipynb
02-datascience-ai-ml/: statistics-refresher.ipynb
resources/: README.md
resources/MLCourse/: GAN_on_Fashion_MNIST.ipynb  TransferLearning.ipynb  VariationalAutoEncoders.ipynb  access_log.txt  mammo_masses_project.ipynb  subset-small.tsv
resources/MLCourse/GenAI/: Transformers_MLCourse.ipynb
resources/MLCourse/ml-100k/: u.data  u1.base  u2.base  u3.base  u3.test  u4.base  u4.test  u5.base  u5.test  ua.base  ub.base
sandbox/:  floats.ipynb  05-floats.ipynb  integers.ipynb  membershiptest.ipynb  rational_numbers.ipynb  refresh.ipynb
