[tool.poetry]
name = "advanced-python"
version = "0.0.1"
description = "Python Learning Materials and Guide"
authors = ["guerrero <arielguerrero1012@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advanced_python"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
tensorflow = "^2.15.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
wheel = "^0.42.0"
polars = "^0.19.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
